# mipi_encode

./: CMakeLists.txt  License  README.en.md  README.md
inc/: camera_init.h
lib/: camera_init.c
src/: mipi_main.c  mipi_main_back.c
